<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>GraxCode</groupId>
   <artifactId>JByteMod</artifactId>
   <version>Reborn</version>
   <packaging>jar</packaging>
   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.source>1.8</maven.compiler.source>
      <maven.compiler.target>1.8</maven.compiler.target>
       <kotlin.version>1.3.50</kotlin.version>
   </properties>
   <build>
      <!--<sourceDirectory>src</sourceDirectory>-->
      <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>3.0.2</version>
            <configuration>
               <archive>
                  <manifest>
                     <addClasspath>true</addClasspath>
                     <classpathPrefix>lib/</classpathPrefix>
                     <mainClass>me.grax.jbytemod.JByteMod</mainClass>
                  </manifest>
               </archive>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>2.3</version>
            <configuration>
               <minimizeJar>false</minimizeJar>
               <createDependencyReducedPom>false</createDependencyReducedPom>
            </configuration>
            <executions>
               <execution>
                  <phase>package</phase>
                  <goals>
                     <goal>shade</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-install-plugin</artifactId>
            <version>2.5.2</version>
            <executions>
               <execution>
                  <id>install-weblaf</id>
                  <phase>clean</phase>
                  <configuration>
                     <file>${basedir}/lib/weblaf-complete-1.29-fixed.jar</file>
                     <repositoryLayout>default</repositoryLayout>
                     <groupId>com.weblaf</groupId>
                     <artifactId>weblaf</artifactId>
                     <version>1.2.9</version>
                     <packaging>jar</packaging>
                     <generatePom>true</generatePom>
                  </configuration>
                  <goals>
                     <goal>install-file</goal>
                  </goals>
               </execution>
               <execution>
                  <id>install-cfr</id>
                  <phase>clean</phase>
                  <configuration>
                     <file>${basedir}/lib/cfr_0_146.jar</file>
                     <repositoryLayout>default</repositoryLayout>
                     <groupId>org.benf</groupId>
                     <artifactId>cfr</artifactId>
                     <version>1.4.6</version>
                     <packaging>jar</packaging>
                     <generatePom>true</generatePom>
                  </configuration>
                  <goals>
                     <goal>install-file</goal>
                  </goals>
               </execution>
               <execution>
                  <id>install-attach</id>
                  <phase>clean</phase>
                  <configuration>
                     <file>${basedir}/lib/attach-1.7.jar</file>
                     <repositoryLayout>default</repositoryLayout>
                     <groupId>com.sun</groupId>
                     <artifactId>attach</artifactId>
                     <version>1.7</version>
                     <packaging>jar</packaging>
                     <generatePom>true</generatePom>
                  </configuration>
                  <goals>
                     <goal>install-file</goal>
                  </goals>
               </execution>
               <execution>
                  <id>install-procyon</id>
                  <phase>clean</phase>
                  <configuration>
                     <file>${basedir}/lib/procyon-0.5.36.jar</file>
                     <repositoryLayout>default</repositoryLayout>
                     <groupId>org.bitbucket.mstrobel</groupId>
                     <version>0.5.33</version>
                     <packaging>jar</packaging>
                     <generatePom>true</generatePom>
                  </configuration>
                  <goals>
                     <goal>install-file</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
          <plugin>
              <groupId>org.jetbrains.kotlin</groupId>
              <artifactId>kotlin-maven-plugin</artifactId>
              <version>${kotlin.version}</version>
              <executions>
                  <execution>
                      <id>compile</id>
                      <phase>compile</phase>
                      <goals>
                          <goal>compile</goal>
                      </goals>
                  </execution>
                  <execution>
                      <id>test-compile</id>
                      <phase>test-compile</phase>
                      <goals>
                          <goal>test-compile</goal>
                      </goals>
                  </execution>
              </executions>
              <configuration>
                  <jvmTarget>1.8</jvmTarget>
                  <languageVersion>1.3</languageVersion>
              </configuration>
          </plugin>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.6.1</version>
              <executions>
                  <execution>
                      <id>compile</id>
                      <phase>compile</phase>
                      <goals>
                          <goal>compile</goal>
                      </goals>
                  </execution>
                  <execution>
                      <id>testCompile</id>
                      <phase>test-compile</phase>
                      <goals>
                          <goal>testCompile</goal>
                      </goals>
                  </execution>
              </executions>
              <configuration>
                <compilerArgs>
                   <arg>-verbose</arg>
                   <arg>-Xlint:all,-options,-path</arg>
                </compilerArgs>
                <fork>true</fork>
                <source>1.8</source>
                <target>1.8</target>
             </configuration>
          </plugin>
      </plugins>
   </build>

   <repositories>
      <repository>
         <id>jcenter</id>
         <url>https://jcenter.bintray.com</url>
         <name>jcenter-bintray</name>
      </repository>
   </repositories>


   <dependencies>
      <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
         <version>2.4</version>
      </dependency>
      <dependency>
         <groupId>com.fifesoft</groupId>
         <artifactId>rsyntaxtextarea</artifactId>
         <version>2.6.1</version>
      </dependency>


      <dependency>
         <groupId>club.minnced</groupId>
         <artifactId>java-discord-rpc</artifactId>
         <version>2.0.2</version>
      </dependency>

      <!--
     ASM has some modified code therefore i cannot include it here
     <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm-all</artifactId>
             <version>5.2</version>
     </dependency>
        -->
       <!--
      Outdated version, using latest branch instead
      <dependency>
         <groupId>org.bitbucket.mstrobel</groupId>
         <artifactId>procyon-compilertools</artifactId>
         <version>0.5.32</version>
      </dependency>
      <dependency>
         <groupId>org.bitbucket.mstrobel</groupId>
         <artifactId>procyon-core</artifactId>
         <version>0.5.32</version>
      </dependency>
        -->
      <!--
      <dependency>
         <groupId>org.bitbucket.mstrobel</groupId>
         <artifactId>procyon-core</artifactId>
         <version>0.5.36</version>
      </dependency>
      -->

      <dependency>
         <groupId>org.bitbucket.mstrobel</groupId>
         <artifactId>procyon-core</artifactId>
         <version>0.5.36</version>
      </dependency>
      <dependency>
         <groupId>org.bitbucket.mstrobel</groupId>
         <artifactId>procyon-expressions</artifactId>
         <version>0.5.36</version>
      </dependency>
      <dependency>
         <groupId>org.bitbucket.mstrobel</groupId>
         <artifactId>procyon-reflection</artifactId>
         <version>0.5.36</version>
      </dependency>
      <dependency>
         <groupId>org.bitbucket.mstrobel</groupId>
         <artifactId>procyon-compilertools</artifactId>
         <version>0.5.36</version>
      </dependency>

      <dependency>
         <!-- Warning: This version is outdated and i couldn't find any newer version, use 3.8.0 instead -->
         <groupId>org.tinyjee.jgraphx</groupId>
         <artifactId>jgraphx</artifactId>
         <version>3.4.1.3</version>
      </dependency>
      <dependency>
         <groupId>org.jfree</groupId>
         <artifactId>jfreechart</artifactId>
         <version>1.5.0</version>
      </dependency>
      <dependency>
         <groupId>com.weblaf</groupId>
         <artifactId>weblaf</artifactId>
         <version>1.2.9</version>
      </dependency>
      <dependency>
         <groupId>org.benf</groupId>
         <artifactId>cfr</artifactId>
         <version>0.146</version>
      </dependency>
      <dependency>
         <groupId>com.sun</groupId>
         <artifactId>attach</artifactId>
         <version>1.7</version>
      </dependency>
      <dependency>
         <groupId>commons-cli</groupId>
         <artifactId>commons-cli</artifactId>
         <version>1.4</version>
      </dependency>
      <!-- https://mvnrepository.com/artifact/org.apache.ant/ant -->
      <dependency>
         <groupId>org.apache.ant</groupId>
         <artifactId>ant</artifactId>
         <version>1.10.5</version>
      </dependency>
       <dependency>
           <groupId>org.jetbrains.kotlin</groupId>
           <artifactId>kotlin-stdlib-jdk8</artifactId>
           <version>${kotlin.version}</version>
       </dependency>
       <dependency>
           <groupId>org.jetbrains.kotlin</groupId>
           <artifactId>kotlin-test</artifactId>
           <version>${kotlin.version}</version>
           <scope>test</scope>
       </dependency>
       <dependency>
           <groupId>org.jetbrains.kotlin</groupId>
           <artifactId>kotlin-stdlib</artifactId>
           <version>${kotlin.version}</version>
       </dependency>
       <dependency>
           <groupId>com.google.guava</groupId>
           <artifactId>guava</artifactId>
           <version>28.1-jre</version>
       </dependency>
       <dependency>
           <groupId>com.google.code.gson</groupId>
           <artifactId>gson</artifactId>
           <version>2.8.5</version>
       </dependency>
   </dependencies>
</project>
